# motion_planning

./: .gitignore  CMakeLists.txt  Guide.txt  README.md  robot_costs_2_ifmta.txt  tree_nodes.txt
include/motion_planning/: pch.hpp
include/motion_planning/control/: controller.hpp  dwa_planner.hpp  nav2_controller.hpp
include/motion_planning/ds/: bit_node.hpp  edge_info.hpp  fmt_node.hpp  fmtx_node.hpp  graph_node.hpp  grid_node.hpp  ifmt_node.hpp  node.hpp  priority_queue copy.hpp  priority_queue.hpp  rrtx_node.hpp  tree_node.hpp
include/motion_planning/obsolete/: SE2_state.hpp  fmt_node copy.hpp  fmtx.hpp  informed_any_fmta_backup.hpp  node.hpp  ros2_manager copy.hpp  ros2_manager_mar11.hpp  rrtx.hpp  rrtx_node copy.hpp  tree_node.hpp
include/motion_planning/planners/: planner.hpp  planner_factory.hpp
include/motion_planning/planners/geometric/: any_fmt.hpp  bit_star.hpp  fmt.hpp  fmta.hpp  fmtx.hpp  fmtx2.hpp  informed_any_fmt.hpp  informed_any_fmta.hpp  robot_costs_2_ifmta.txt  rrt_star.hpp  rrtx.hpp  rrtx2.hpp
include/motion_planning/planners/kinodynamic/: kinodynamic_fmtx.hpp  kinodynamic_rrtx.hpp
include/motion_planning/state_space/: SE2_statespace.hpp  dubins_statespace.hpp  dubins_time_statespace.hpp  euclidean_state.hpp  euclidean_statespace.hpp  min_snap_statespace.hpp  rdt_statespace.hpp  state.hpp  statespace.hpp  thruster_statespace.hpp
include/motion_planning/utils/: algorithm_type.hpp  gazebo_obstacle_checker.hpp  kalman_filter.hpp  kalman_filter_factory.hpp  kd_tree.hpp  lie_kd_tree.hpp  nano_flann.hpp  obstacle_checker.hpp  occupancygrid_obstacle_checker copy.hpp  occupancygrid_obstacle_checker.hpp  params.hpp  parse_sdf.hpp  planner_params copy.hpp  planner_params.hpp  problem_definition.hpp  ros2_manager.hpp  ros2_manager_dubin.hpp  ros2_manager_min_snap.hpp  ros2_manager_r2t.hpp  ros2_manager_thruster.hpp  ros2node.hpp  rviz_visualization.hpp  visualization.hpp  weighted_nano_flann.hpp
scripts/: compare.py  plot.py  plot_cost.py  plot_duration.py  plot_duration_backup.py  plot_f.py  plot_g.py  plot_g_compact.py  plot_heatmap.py  plot_intratrial_variability.py  plot_kino.py  plot_median_replanning_boxplot_pertrial.py  plot_one_big copy.py  plot_rrtx.py  plot_rrtx_kino.py  plot_simple.py  po.py  sim  table_gen.py  table_gen_kino.py  test.sh  valgrind.py
scripts/figures_summary_compact_sensitivity/: summary_metrics_all_conditions.csv
sims/: CMakeLists.txt  SIM_SEQ  default.rviz  dynamic_world.sdf  dynamic_world_1_obs.sdf  dynamic_world_4_obs.sdf  dynamic_world_many.sdf  dynamic_world_many_constant_acc.sdf  dynamic_world_many_constant_acc_uncrowded.sdf  dynamic_world_straight.sdf  dynamic_world_straight_box.sdf  dynamic_world_straight_box_circle.sdf  dynamic_world_straight_box_circle_10.sdf  dynamic_world_straight_box_circle_10_3D.sdf  dynamic_world_straight_box_diag.sdf  gz_circle.cc  gz_move.cc  gz_move_constant.cc  gz_move_constant_random.cc  ros_gz_bridge.yaml  sim  static_removable_world.sdf  static_world2.sdf  static_world_box.sdf
src/ds/: bit_node.cpp  fmt_node.cpp  ifmt_node.cpp  rrtx_node.cpp  tree_node.cpp
src/obsolete/: fmtx.cpp  fmtx2_march22.cpp  fmtx2_march30.cpp  fmtx_alternative_for_not_inflation.cpp  fmtx_backpmarch12.cpp  fmtx_backup_ordinary_inflated.cpp  fmtx_use_for_pseudocode.cpp  rrt_star.cpp  rrtx.cpp  rrtx2 copy 2.cpp  rrtx2 copy.cpp
src/obsolete/future/: informed_any_fmta_apr23.cpp  informed_any_fmta_apr8(mixidea).cpp  informed_any_fmta_backup.cpp
src/planners/: planner_factory.cpp
src/planners/geometric/: any_fmt.cpp  bit_star.cpp  fmt.cpp  fmta.cpp  fmtx copy.cpp  fmtx.cpp  fmtx2.cpp  fmtx2_march22.cpp  fmtx2_march30.cpp  fmtx_alternative_for_not_inflation.cpp  fmtx_backpmarch12.cpp  fmtx_backup_ordinary_inflated.cpp  fmtx_use_for_pseudocode.cpp  informed_any_fmt.cpp  informed_any_fmta.cpp  robot_costs_2_ifmta.txt  rrt_star.cpp  rrtx.cpp  rrtx2 copy 2.cpp  rrtx2 copy.cpp  rrtx2.cpp  sim_fmtx_5000samples_25_5_2025_23_58_19_timed.csv  sim_fmtx_5000samples_26_5_2025_0_0_20_timed.csv  sim_fmtx_500samples_25_5_2025_15_15_33_timed.csv  tree_nodes.txt
src/planners/kinodynamic/: kinodynamic_fmtx.cpp  kinodynamic_fmtx__.cpp  kinodynamic_fmtx_backup_directed.cpp  kinodynamic_fmtx_backup_directed_jul14.cpp  kinodynamic_fmtx_backup_on_the_fly_directed.cpp  kinodynamic_fmtx_directed.cpp  kinodynamic_fmtx_dubin_3D.cpp  kinodynamic_fmtx_dubin_4D.cpp  kinodynamic_fmtx_general.cpp  kinodynamic_fmtx_min_snap.cpp  kinodynamic_fmtx_on_the_fly_directed.cpp  kinodynamic_fmtx_unified.cpp  kinodynamic_rrtx.cpp
src/state_space/: dubins_statespace.cpp  dubins_time_statespace.cpp  euclidean_state.cpp  euclidean_statespace.cpp  min_snap_statespace.cpp  rdt_statespace.cpp  thruster.cpp  thruster_statespace copy.cpp  thruster_statespace.cpp
src/utils/: gazebo_obstacle_checker copy.cpp  gazebo_obstacle_checker.cpp  kalman_filter.cpp  kalman_filter_factory.cpp  lie_kd_tree.cpp  nano_flann.cpp  rviz_visualization.cpp  weighted_nano_flann.cpp
test/unit/: robot_costs_2_ifmta.txt  rrtx_tree_nodes.csv  sim_fmtx_3000samples_16_7_2025_20_38_13_timed.csv  sim_fmtx_500samples_16_7_2025_20_36_41_timed.csv  sim_rrtx_2000samples_17_7_2025_22_0_11_timed.csv  sim_rrtx_2000samples_17_7_2025_22_1_20_timed.csv  test_anyfmt.cpp  test_bitstar.cpp  test_collision.cpp  test_dubin_time.cpp  test_fmt.cpp  test_fmta.cpp  test_fmtx.cpp  test_fmtx2.cpp  test_gz.cpp  test_informed_anyfmt.cpp  test_informed_anyfmta.cpp  test_kdtree.cpp  test_kinodynamic_fmtx.cpp  test_kinodynamic_fmtx_R2T.cpp  test_kinodynamic_fmtx__.cpp  test_kinodynamic_fmtx_dubin_4D.cpp  test_kinodynamic_fmtx_min_snap_5D.cpp  test_kinodynamic_fmtx_thruster_5D.cpp  test_kinodynamic_rrtx_R2T.cpp  test_kinodynamic_rrtx_dubin_4D.cpp  test_kinodynamic_rrtx_thruster_5D.cpp  test_lie_kdtree.cpp  test_min_snap.cpp  test_occupancy.cpp  test_rrt_star.cpp  test_rrtx.cpp  test_rrtx2.cpp  test_state.cpp  test_thruster.cpp  test_visual.cpp  test_weighted_kdtree.cpp  test_weighted_kdtree_visualization.cpp  tree_nodes.txt
